--- a/map.html
+++ b/map.html
@@ -12,10 +12,25 @@
             height: 800px;
             background-color: lightblue;
         }
+
+        /* Tooltip style */
+        .tooltip {
+            position: absolute;
+            visibility: hidden;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 8px;
+            border-radius: 4px;
+            pointer-events: none; /* Prevent tooltip from blocking other elements */
+            white-space: pre-line; /* Allows line breaks in the tooltip */
+        }
     </style>
 </head>
 <body>
     <svg id="map"></svg>
+    <!-- Tooltip div element -->
+    <div id="tooltip" class="tooltip"></div>
+
     <script src="map.js"></script>
 </body>
 </html>
