--- a/map.html
+++ b/map.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D3 Map</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="https://d3js.org/topojson.v1.min.js"></script> <!-- Add TopoJSON here -->
+    <script src="https://d3js.org/topojson.v1.min.js"></script> 
     <style>
         svg {
             width: 1200px;
@@ -13,7 +13,6 @@
             background-color: lightblue;
         }
 
-        /* Tooltip style */
         .tooltip {
             position: absolute;
             visibility: hidden;
@@ -21,14 +20,14 @@
             color: white;
             padding: 8px;
             border-radius: 4px;
-            pointer-events: none; /* Prevent tooltip from blocking other elements */
-            white-space: pre-line; /* Allows line breaks in the tooltip */
+            pointer-events: none; 
+            white-space: pre-line; 
         }
     </style>
 </head>
 <body>
     <svg id="map"></svg>
-    <!-- Tooltip div element -->
+
     <div id="tooltip" class="tooltip"></div>
 
     <script src="map.js"></script>
