--- a/connections_viz.html
+++ b/connections_viz.html
@@ -21,23 +21,23 @@
   <label for="country1">Select Country 1:</label>
   <select id="country1">
     <option value="">Select Country</option>
-    <option value="china">China</option>
-    <option value="hong_kong">Hong Kong</option>
-    <option value="india">India</option>
-    <option value="indonesia">Indonesia</option>
-    <option value="japan">Japan</option>
-    <option value="pakistan">Pakistan</option>
+    <option value="China">China</option>
+    <option value="Hong_Kong_SAR">Hong Kong</option>
+    <option value="India">India</option>
+    <option value="Indonesia">Indonesia</option>
+    <option value="Japan">Japan</option>
+    <option value="Pakistan">Pakistan</option>
   </select>
 
   <label for="country2">Select Country 2:</label>
   <select id="country2">
     <option value="">Select Country</option>
-    <option value="china">China</option>
-    <option value="hong_kong">Hong Kong</option>
-    <option value="india">India</option>
-    <option value="indonesia">Indonesia</option>
-    <option value="japan">Japan</option>
-    <option value="pakistan">Pakistan</option>
+    <option value="China">China</option>
+    <option value="Hong_Kong_SAR">Hong Kong</option>
+    <option value="India">India</option>
+    <option value="Indonesia">Indonesia</option>
+    <option value="Japan">Japan</option>
+    <option value="Pakistan">Pakistan</option>
   </select>
 
   <button onclick="loadRoute()">Show Flight Routes</button>
