added pages, embeded 5 visualizations

--- a/website/index.html
+++ b/website/index.html
@@ -47,6 +47,7 @@
         <div class="snowflake">
             🌎
         </div>
+    </div>
 
         <div class = "container">
             <h1>Flight Networks in Asia: Visualizing Air Travel Routes</h1>
@@ -56,10 +57,11 @@
                     <h1>Dashboard</h1>
                     <nav>
                         <ul>
-                            <li><a href = "#Overview">Overview</a></li>
-                            <li><a href = "#Viz1">Viz1</a></li>
-                            <li><a href = "#Summary">Summary</a></li>
-                            <li><a href = "#References">References</a></li>
+                            <li><a href = "index.html">Overview</a></li>
+                            <li><a href = "viz1.html">Flight Route Selector</a></li>
+                            <li><a href = "viz2.html">Airport Bubble Map</a></li>
+                            <li><a href = "viz3.html">Airport Activity</a></li>
+                            <li><a href = "viz4.html">Interactive Map</a></li>
                         </ul>
                     </nav>
                 </aside>
@@ -83,6 +85,11 @@
                                 interest to all of
                                 us in the group.</p>
                                 
+                        </div>
+                    </section>
+
+                    <section id = "Dataset">
+                        <div class = "card">
                             <h2>Dataset</h2>
                             <p>The data provides a global perspective on air travel, which gives us the opportunity to
                                 analyze the
@@ -102,36 +109,11 @@
                         </div>
                     </section>
 
-                    <section id = "Viz1">
-                        <div class = "card">
-                            <iframe src="airport_bubble_map.html"></iframe>
-                            <p></p>
-                        </div>
-                    </section>
-
-                    <section id = "Visualization 2">
-                        <div class = "card">
-                            <h2>viz 2</h2>
-                            <p>
-
-                            </p>
-                        </div>
-                    </section>
-
-                    <section id = "Visualization 3">
-                        <div class = "card">
-                            <h2>viz 3</h2>
-                            <p>
-
-                            </p>
-                        </div>
-                    </section>
-
                     <section id = "Summary">
                         <div class = "card">
                             <h2>Summary of Findings</h2>
                             <p>
-
+                                lorem ipsum
                             </p>
                         </div>
                     </section>
@@ -140,13 +122,12 @@
                         <div class = "card">
                             <h2>References</h2>
                             <p>
-
+                            lorem ipsum
                             </p>
                         </div>
                     </section>
                 </main>
             </div>
-        </div>
 </body>
 
 </html>
