--- a/website/index.html
+++ b/website/index.html
@@ -69,21 +69,14 @@
                     <section id = "Overview">
                         <div class = "card">
                             <h2>Introduction</h2>
-                            <p>Our topic is related to flight route data. In other words, from a specific airport, we
-                                have data on
-                                the specific airport
-                                in addition to where you can fly directly to from that airport. From flight route data,
-                                we can
-                                gather a lot of information
-                                about the broader world- for example, we can see passenger travel trends, learn what
-                                countries have
-                                strong relations denoted by
-                                many flights between them, and see what countries may be the most connected to and the
-                                most isolated
-                                from the outside world. Aviation route data like
-                                this can tell us so much about geopolitical trends in our world, and is of great
-                                interest to all of
-                                us in the group.</p>
+                            <p>Our project focuses on aviation route data, specifically direct flight connections from individual airports around the world. 
+                                By analyzing where you can fly directly from a given airport, we gain valuable insight into patterns of global connectivity.
+                                Flight routes are more than just paths for planes. 
+                                They tell broader stories about our world. They highlight travel trends, showcase economic ties, and reflect political relationships between countries. 
+                                For example, the frequency and density of routes between two nations may suggest strong diplomatic or commercial bonds, while the absence of connections can point to isolation or geopolitical tension.
+                                This kind of data allows us to identify which regions are the most globally integrated and which are the most disconnected. 
+                                In a world where mobility and connection are vital, flight routes serve as a powerful lens to understand international relationships, regional development, and global movement patterns.
+                                Through this website, we aim to make sense of these networks. Our goal is not just to understand where planes go, but what those routes reveal about the world we live in.</p>
                                 
                         </div>
                     </section>
