references and move files

--- a/website/index.html
+++ b/website/index.html
@@ -122,7 +122,22 @@
                         <div class = "card">
                             <h2>References</h2>
                             <p>
-                            lorem ipsum
+                                <em>Prabhakar, N., Anbarasi, L.J. Exploration of the global air transport network using social network analysis. Soc. Netw. Anal. Min. 11, 26 (2021). 
+                                    https://doi.org/10.1007/s13278-021-00735-1</em>
+
+                                <br><br>The above paper aims to better understand the patterns of world air travel. 
+                                The authors point out that analysis of such data reveal important insights about economic growth and intercountry relations. 
+
+                                <br><br><em>
+                                    Albers, S., Allroggen, F., Brueckner, J., Chang, Y. C., Cheung, T. K. Y., Fichert, F., Li, W., Logothetis, M., Luttmann, A., Maertens, S., Malighetti, P., Nenem, S., Suau-Sanchez, P., & Zuidberg, J. (2022, September 8).
+                                 Assessment of hub airports’ connectivity and self-connection potentials. Transport Policy. 
+                                 https://www.sciencedirect.com/science/article/pii/S0967070X22002451 
+                                </em>
+
+                                <br><br>The above paper aims to better understand the patterns of world air travel. 
+                                The authors point out that analysis of such data reveal important insights about economic growth and intercountry relations.
+
+
                             </p>
                         </div>
                     </section>
