--- a/website/viz1.html
+++ b/website/viz1.html
@@ -71,7 +71,7 @@
                             <h2>Flight Route Selector</h2>
                         </div>
                         <div class = "card">
-                            <iframe src="/connections_viz.html" width="100%" height="600" frameborder="0"></iframe>
+                            <iframe src="connections_viz.html" width="100%" height="600" frameborder="0"></iframe>
                         </div>
                         <div class = "card">
                             <p>lorem ipsum</p>
