--- a/website/viz4.html
+++ b/website/viz4.html
@@ -71,7 +71,7 @@
                             <h2>title of visualization 4</h2>
                         </div>
                         <div class = "card">
-                            <iframe src="/map.html" width="100%" height="600" frameborder="0"></iframe>
+                            <iframe src="map.html" width="100%" height="600" frameborder="0"></iframe>
                         </div>
                         <div class = "card">
                             <p>lorem ipsum</p>
