--- a/website/viz2.html
+++ b/website/viz2.html
@@ -71,7 +71,7 @@
                             <h2>Airport Bubble Map</h2>
                         </div>
                         <div class = "card">
-                            <iframe src="/airport_bubble_map.html" width="100%" height="600" frameborder="0"></iframe>
+                            <iframe src="airport_bubble_map.html" width="100%" height="600" frameborder="0"></iframe>
                         </div>
                         <div class = "card">
                             <p>lorem ipsum</p>
