--- a/website/viz3.html
+++ b/website/viz3.html
@@ -71,7 +71,7 @@
                             <h2>Heatmap of Flight Activity at Asian Airports</h2>
                         </div>
                         <div class = "card">
-                            <iframe src="/asian_airport_flight_heatmap.html" width="100%" height="600" frameborder="0"></iframe>
+                            <iframe src="asian_airport_flight_heatmap.html" width="100%" height="600" frameborder="0"></iframe>
                         </div>
                         <div class = "card">
                             <p>lorem ipsum</p>
@@ -82,7 +82,7 @@
                             <h2>title of visualization 3</h2>
                         </div>
                         <div class = "card">
-                            <iframe src="/bubble.html" width="100%" height="600" frameborder="0"></iframe>
+                            <iframe src="bubble.html" width="100%" height="600" frameborder="0"></iframe>
                         </div>
                         <div class = "card">
                             <p>lorem ipsum</p>
