--- a/website/index.html
+++ b/website/index.html
@@ -84,21 +84,13 @@
                     <section id = "Dataset">
                         <div class = "card">
                             <h2>Dataset</h2>
-                            <p>The data provides a global perspective on air travel, which gives us the opportunity to
-                                analyze the
-                                patterns between countries
-                                and their air travel routes. Identifying flight frequency patterns and airline hubs can
-                                reveal
-                                insights about economic activity,
-                                geopolitical issues, and global tourism. As for missing information, we don’t have data
-                                on pricing
-                                or the size of the aircraft
-                                flying the routes, so a route with a small propeller plane would be treated the same as
-                                a route with
-                                an Airbus A380.
-                                These are some possible limitations for our analysis, but we feel our website will still
-                                be
-                                interesting and educational even without those data points.</p>
+                            <p>We are using a dataset comprised of all current flight routes in Asia, which give us the opportunity to analyze the patterns between, 
+                                and within, countries. Identifying flight frequency patterns and airline hubs can reveal insights about economic activity, geopolitical 
+                                issues, and global tourism. The data we have also contains information like the airlines flying each route, the average length the route 
+                                takes, and information about the airport, such as coordinates, altitude, and the city the airport is tied to and country it is located in. 
+                                There are some data points we don’t have- such as data on pricing or the size of the aircraft flying the routes, so a route with a small 
+                                propellor plane is treated the same by our analysis as a route with a massive Airbus A380. Despite these limitations, though, we feel 
+                                we were able to create a lot of interesting visualizations and learn a lot about the world.</p>
                         </div>
                     </section>
 
