--- a/website/index.html
+++ b/website/index.html
@@ -118,8 +118,9 @@
                                 <em>Prabhakar, N., Anbarasi, L.J. Exploration of the global air transport network using social network analysis. Soc. Netw. Anal. Min. 11, 26 (2021). 
                                     https://doi.org/10.1007/s13278-021-00735-1</em>
 
-                                <br><br>The above paper aims to better understand the patterns of world air travel. 
-                                The authors point out that analysis of such data reveal important insights about economic growth and intercountry relations. 
+                                <br><br>This paper explores airline networks through the lens of complex network theory. 
+                                The study develops and employs network metrics (such as centrality measures, clustering coefficients, and connectivity indices) to quantify how flight routes are structured.
+                                A focus on direct connections helps in understanding how individual airports contribute to global connectivity, revealing trends in route density and network integration.
 
                                 <br><br><em>
                                     Albers, S., Allroggen, F., Brueckner, J., Chang, Y. C., Cheung, T. K. Y., Fichert, F., Li, W., Logothetis, M., Luttmann, A., Maertens, S., Malighetti, P., Nenem, S., Suau-Sanchez, P., & Zuidberg, J. (2022, September 8).
@@ -127,8 +128,10 @@
                                  https://www.sciencedirect.com/science/article/pii/S0967070X22002451 
                                 </em>
 
-                                <br><br>The above paper aims to better understand the patterns of world air travel. 
-                                The authors point out that analysis of such data reveal important insights about economic growth and intercountry relations.
+                                <br><br>This paper investigates global transportation networks with a strong emphasis on aviation connectivity. 
+                                It applies complex network analysis techniques to explore the structure and dynamics of flight networks. 
+                                The study identifies central nodes (airports) that serve as major hubs within the network and examines how these hubs influence overall connectivity. By analyzing direct flight connections, 
+                                the paper reveals patterns in the network’s structure, such as clustering and path lengths, which in turn highlight potential vulnerabilities and strengths in global connectivity.
 
 
                             </p>
