--- a/website/viz2.html
+++ b/website/viz2.html
@@ -74,7 +74,16 @@
                             <iframe src="airport_bubble_map.html" width="100%" height="600" frameborder="0"></iframe>
                         </div>
                         <div class = "card">
-                            <p>lorem ipsum</p>
+                            <p>This map displays all airports in Asia based on size. The airports are divided into large airports 
+                                (>75 direct destinations) in blue, medium airports (>25 direct destinations) in purple, and small 
+                                airports in orange. From this map, it can be very clearly seen how well-connected China’s airports 
+                                are, with dozens of large and medium-sized airports in its eastern half. Its western half is much 
+                                less populated and sparse, which can be seen by the lack of large airports. Other highly-populated 
+                                countries, like Korea and Vietnam, have plenty of airports throughout, while countries with smaller 
+                                populations and lots of empty areas, like Mongolia and Kazakhstan, similarly have a lack of airports 
+                                in many parts of the country. This map also shows how important airports are to islands, with islands 
+                                in countries like Indonesia and Japan’s Okinawa often containing small airports with only a few destinations 
+                                that primarily serve to link the islands to the mainland.</p>
                         </div>
                     </section>
 
