text for interactive map

--- a/website/viz4.html
+++ b/website/viz4.html
@@ -68,13 +68,23 @@
                 <main class = "content">
                     <section>
                         <div class = "card">
-                            <h2>title of visualization 4</h2>
+                            <h2>Interactive Map</h2>
                         </div>
                         <div class = "card">
                             <iframe src="map.html" width="100%" height="600" frameborder="0"></iframe>
                         </div>
                         <div class = "card">
-                            <p>lorem ipsum</p>
+                            <p>This map shows each airport (red dot) and all of its direct routes (lines) to other airports (blue or gray dots). 
+                                By clicking on a specific airport, you can immediately see the extent of its connectivity.
+                                
+                                <br><br> Airports with a large number of connecting lines stand out as significant regional or international hubs. 
+                                They may serve as primary gateways for travelers entering or leaving a country or region. 
+                                This provides a visual confirmation of how certain cities become critical transit points and drivers of economic and social activity.
+                                The routes you see are not just about flight paths; they hint at deeper relationships. 
+                                A high density of lines between specific regions can suggest strong commercial or diplomatic ties. 
+                                In contrast, gaps or fewer direct flights might indicate political or geographical barriers, or simply lower market demand.
+                            
+                            </p>
                         </div>
                     </section>
 
