--- a/website/viz1.html
+++ b/website/viz1.html
@@ -74,7 +74,22 @@
                             <iframe src="connections_viz.html" width="100%" height="600" frameborder="0"></iframe>
                         </div>
                         <div class = "card">
-                            <p>lorem ipsum</p>
+                            <p>This flight route selector lets you choose two countries from the list of China, Hong Kong, India, 
+                                Indonesia, Japan, and Pakistan and let you see all the flight connections between them. You can 
+                                also view domestic flights (with the exception of China, as the file is too large and cannot be 
+                                displayed in Python) for each country. This allows for a lot of interesting insights to be drawn. 
+                                For example, Japan and Hong Kong share plenty of links for tourism and business, and that can be 
+                                seen by how you can fly directly from Hong Kong to 12 airports in Japan. Pakistan is a primarily 
+                                Muslim country and it only has direct connections to four airports in China- Beijing and Guangzhou, 
+                                two of China’s most important cities, and Urumqi and Kashgar, which are smaller cities with a large 
+                                Muslim population in the west of China. Some countries are also much more dependent on domestic 
+                                flights than other countries. For example, Pakistan, a less wealthy nation that has a decently built-out 
+                                road network, doesn’t have too many domestic flight routes. Indonesia, on the other hand, is an island 
+                                nation, meaning flights are the easiest way to get between islands that might not have regular boat 
+                                service. A lack of flights can also tell you a lot. Many people know about the geopolitical tensions 
+                                between India and Pakistan, so it might not be unexpected that there are no flights between the two 
+                                countries. However, due to border disputes between India and China, there are also no direct flights 
+                                between the world’s two most populous countries, despite the demand being there.</p>
                         </div>
                     </section>
 
