--- a/website/viz5.html
+++ b/website/viz5.html
@@ -58,11 +58,10 @@
                     <nav>
                         <ul>
                             <li><a href = "index.html">Overview</a></li>
-                            <li><a href = "viz1.html">Flight Route Selector</a></li>
-                            <li><a href = "viz2.html">Viz2</a></li>
-                            <li><a href = "viz3.html">Viz3</a></li>
-                            <li><a href = "viz4.html">Viz4</a></li>
-                            <li><a href = "viz5.html">Viz5</a></li>
+                            <li><a href = "viz3.html">Intro Visualizations</a></li>
+                            <li><a href = "viz2.html">Airport Bubble Map</a></li>
+                            <li><a href = "viz4.html">Individual Airport Finder</a></li>
+                            <li><a href = "viz1.html">Country Pair Route Selector</a></li>
                         </ul>
                     </nav>
                 </aside>
