--- a/website/viz4.html
+++ b/website/viz4.html
@@ -60,6 +60,7 @@
                             <li><a href = "index.html">Overview</a></li>
                             <li><a href = "viz3.html">Intro Visualizations</a></li>
                             <li><a href = "viz2.html">Airport Bubble Map</a></li>
+                            <li><a href = "viz5.html">Flight Length by Airport</a></li>
                             <li><a href = "viz4.html">Individual Airport Finder</a></li>
                             <li><a href = "viz1.html">Country Pair Route Selector</a></li>
                         </ul>
