added flight times and all flights vis

--- a/website/viz5.html
+++ b/website/viz5.html
@@ -69,10 +69,10 @@
                 <main class = "content">
                     <section>
                         <div class = "card">
-                            <h2>title of visualization 5</h2>
+                            <h2>Flight Time vs. Distance</h2>
                         </div>
                         <div class = "card">
-                            
+                            <iframe src="flight_time_vs_distance.html" width="100%" height="600" frameborder="0"></iframe>
                         </div>
                         <div class = "card">
                             <p>lorem ipsum</p>
