--- a/website/viz3.html
+++ b/website/viz3.html
@@ -69,10 +69,10 @@
                 <main class = "content">
                     <section>
                         <div class = "card">
-                            <h2>visualization 3.1</h2>
+                            <h2>All Asian Flight Routes</h2>
                         </div>
                         <div class = "card">
-                            <!--<iframe src="asian_airport_flight_heatmap.html" width="100%" height="600" frameborder="0"></iframe>-->
+                            <iframe src="all_flights.html" width="100%" height="600" frameborder="0"></iframe>
                         </div>
                         <div class = "card">
                             <p>lorem ipsum</p>
