--- a/website/viz3.html
+++ b/website/viz3.html
@@ -75,7 +75,10 @@
                             <iframe src="all_flights.html" width="100%" height="600" frameborder="0"></iframe>
                         </div>
                         <div class = "card">
-                            <p>lorem ipsum</p>
+                            <p>The visualization above provides a comprehensive overview of Asian flight routes, with each line representing a direct connection between two airports. 
+                                Routes are color-coded by airline, allowing for quick visual differentiation between carriers. 
+                                The dense network of lines highlights the high volume of air traffic across major hubs in Asia, particularly around regions like Southeast Asia, East Asia, and the Middle East. 
+                                Hovering over individual routes in the interactive version of this map would reveal specific airline and route information, offering deeper insight into patterns of connectivity and regional air traffic dynamics.</p>
                         </div>
                     </section>
                     <section>
