minor design edits

--- a/website/index.html
+++ b/website/index.html
@@ -51,7 +51,8 @@
 
         <div class = "container">
             <h1>Flight Networks in Asia: Visualizing Air Travel Routes</h1>
-            <h2>William Hanvey, Janet Lim, and Ian Menachery</h2>
+            <hr style="width:80%;text-align:center">
+            <h4>William Hanvey, Janet Lim, and Ian Menachery</h4>
             <div class = "dashboard-container">
                 <aside class = "dashboard-sidebar">
                     <h1>Dashboard</h1>
@@ -70,6 +71,7 @@
                     <section id = "Overview">
                         <div class = "card">
                             <h2>Introduction</h2>
+                            <hr style="width:30%;text-align:center">
                             <p>Our project focuses on aviation route data, specifically direct flight connections from individual airports around the world. 
                                 By analyzing where you can fly directly from a given airport, we gain valuable insight into patterns of global connectivity.
                                 Flight routes are more than just paths for planes. 
@@ -85,6 +87,7 @@
                     <section id = "Dataset">
                         <div class = "card">
                             <h2>Dataset</h2>
+                            <hr style="width:30%;text-align:center">
                             <p>We are using a dataset comprised of all current flight routes in Asia, which give us the opportunity to analyze the patterns between, 
                                 and within, countries. Identifying flight frequency patterns and airline hubs can reveal insights about economic activity, geopolitical 
                                 issues, and global tourism. The data we have also contains information like the airlines flying each route, the average length the route 
@@ -98,6 +101,7 @@
                     <section id = "Summary">
                         <div class = "card">
                             <h2>Summary of Findings</h2>
+                            <hr style="width:30%;text-align:center">
                             <p>
                                 lorem ipsum
                             </p>
@@ -107,6 +111,7 @@
                     <section id = "References">
                         <div class = "card">
                             <h2>References</h2>
+                            <hr style="width:30%;text-align:center">
                             <p>
                                 <em>Prabhakar, N., Anbarasi, L.J. Exploration of the global air transport network using social network analysis. Soc. Netw. Anal. Min. 11, 26 (2021). 
                                     https://doi.org/10.1007/s13278-021-00735-1</em>
