--- a/website/viz4.html
+++ b/website/viz4.html
@@ -51,7 +51,8 @@
 
         <div class = "container">
             <h1>Flight Networks in Asia: Visualizing Air Travel Routes</h1>
-            <h2>William Hanvey, Janet Lim, and Ian Menachery</h2>
+            <hr style="width:80%;text-align:center">
+            <h4>William Hanvey, Janet Lim, and Ian Menachery</h4>
             <div class = "dashboard-container">
                 <aside class = "dashboard-sidebar">
                     <h1>Dashboard</h1>
