--- a/website/index.html
+++ b/website/index.html
@@ -105,7 +105,7 @@
                             <p>
                                 Flight paths can tell us a lot about the world. They tell us where groups of people go for leisure, where their families are, where their ancestors lived, 
                                 where they go for business, and places where they don’t go. By analyzing flight routes, we were able to identify geopolitical bonds between nations, such as 
-                                countries like Singapore that act like a hub for a region, or, the opposite- countries like India and China, two huge countries that aren’t only the friendliest 
+                                countries like Singapore that act like a hub for a region, or, the opposite- countries like India and China, two huge countries that aren’t on the friendliest 
                                 of terms. We can identify things like population density by looking at bubble maps and learn about the efficiency of the governments of different nations by 
                                 looking at timeliness patterns. While our project was focused on Asia specifically, in the future, it would be beneficial to expand it to cover the entire world 
                                 to get a bigger picture of these topics. Additionally, a timeline of flight routes would be useful, as we would be able to uncover things like seasonal trends or 
