--- a/website/index.html
+++ b/website/index.html
@@ -88,7 +88,7 @@
                         <div class = "card">
                             <h2>Dataset</h2>
                             <hr style="width:30%;text-align:center">
-                            <p>We are using a dataset comprised of all current flight routes in Asia, which give us the opportunity to analyze the patterns between, 
+                            <p>We are using a dataset comprised of all current flight routes in Asia- a dataset with just over 10,000 rows- which gives us the opportunity to analyze the patterns between, 
                                 and within, countries. Identifying flight frequency patterns and airline hubs can reveal insights about economic activity, geopolitical 
                                 issues, and global tourism. The data we have also contains information like the airlines flying each route, the average length the route 
                                 takes, and information about the airport, such as coordinates, altitude, and the city the airport is tied to and country it is located in. 
