--- a/website/connections_viz.html
+++ b/website/connections_viz.html
@@ -17,9 +17,9 @@
 </head>
 <body>
 
-  <label for="country1">Select Country 1:</label>
+  <label for="country1">Select Region 1:</label>
   <select id="country1">
-    <option value="">Select Country</option>
+    <option value="">Select Region</option>
     <option value="China">China</option>
     <option value="Hong_Kong_SAR">Hong Kong</option>
     <option value="India">India</option>
@@ -28,9 +28,9 @@
     <option value="Pakistan">Pakistan</option>
   </select>
 
-  <label for="country2">Select Country 2:</label>
+  <label for="country2">Select Region 2:</label>
   <select id="country2">
-    <option value="">Select Country</option>
+    <option value="">Select Region</option>
     <option value="China">China</option>
     <option value="Hong_Kong_SAR">Hong Kong</option>
     <option value="India">India</option>
