added legend to bubble map

--- a/website/airport_bubble_map.html
+++ b/website/airport_bubble_map.html
@@ -77,7 +77,24 @@
         <span style="display: inline-block; width: 12px; height: 12px; background-color: #ff6c47; margin-right: 8px;"></span> Small Airports
     </div>
 </div>
-
+<div style="
+        position: fixed;
+        bottom: 50px;
+        left: 50px;
+        z-index:9999;
+        background-color: white;
+        padding: 10px;
+        border: 2px solid grey;
+        box-shadow: 2px 2px 6px rgba(0,0,0,0.3);
+        font-size: 14px;
+    ">
+        <b>Airport Size</b><br>
+        <div style="margin-top: 5px;">
+            <span style="display: inline-block; width: 12px; height: 12px; background-color: #16099e; margin-right: 8px;"></span> Large Airports<br>
+            <span style="display: inline-block; width: 12px; height: 12px; background-color: #aa0086; margin-right: 8px;"></span> Medium Airports<br>
+            <span style="display: inline-block; width: 12px; height: 12px; background-color: #ff6c47; margin-right: 8px;"></span> Small Airports
+        </div>
+    </div>
 </body>
 <script>
     
