--- a/website/viz1.html
+++ b/website/viz1.html
@@ -76,13 +76,14 @@
                             <iframe src="connections_viz.html" width="100%" height="600" frameborder="0"></iframe>
                         </div>
                         <div class = "card">
-                            <p>This flight route selector lets you choose two countries from the list of China, Hong Kong, India, 
-                                Indonesia, Japan, and Pakistan and let you see all the flight connections between them. You can 
+                            <p>This flight route selector lets you choose two regions from the list of China, Hong Kong, India, 
+                                Indonesia, Japan, and Pakistan, and lets you see all the flight connections between them. The red 
+                                and blue colors are just to make it easier to tell which airports are in which countries. You can 
                                 also view domestic flights (with the exception of China, as the file is too large and cannot be 
                                 displayed in Python) for each country. This allows for a lot of interesting insights to be drawn. 
                                 For example, Japan and Hong Kong share plenty of links for tourism and business, and that can be 
                                 seen by how you can fly directly from Hong Kong to 12 airports in Japan. Pakistan is a primarily 
-                                Muslim country and it only has direct connections to four airports in China- Beijing and Guangzhou, 
+                                Muslim country, and it only has direct connections to four airports in China- Beijing and Guangzhou, 
                                 two of China’s most important cities, and Urumqi and Kashgar, which are smaller cities with a large 
                                 Muslim population in the west of China. Some countries are also much more dependent on domestic 
                                 flights than other countries. For example, Pakistan, a less wealthy nation that has a decently built-out 
