--- a/website/viz3.html
+++ b/website/viz3.html
@@ -90,14 +90,13 @@
                             <iframe src="bubble.html" width="100%" height="600" frameborder="0"></iframe>
                         </div>
                         <div class = "card">
-                            <p>The airports on the left side of the chart (with the highest flight counts) are primarily in China, reflecting the country’s extensive domestic network and its role as a major regional hub. 
-                                Airports like Shanghai Pudong (PVG) and Chengdu (CTU) stand out for their large numbers of direct flights, underscoring their importance in both domestic and international travel.
-                            
-                                Airports with large flight volumes often correlate with vibrant economic activity, major business hubs, or popular tourist destinations. Their prominence in the chart can signal strong demand for air travel whether for business, 
-                                leisure, or both and hint at the economic and political importance of these cities within Asia.
-                            
-                                The fact that certain airports appear repeatedly at the top suggests they serve as crucial transfer points or “gateways” linking not only their own country but also neighboring regions. 
-                                This is consistent with the idea that flight routes go beyond mere transportation; they also reveal deeper patterns of global connectivity and influence, such as diplomatic ties or trade relationships.
+                            <p>The airports on the left side of the chart, which have the largest bubbles, are primarily located in China. This reflects the country's extensive domestic flight network and its position as a major regional hub. Airports like Shanghai Pudong (PVG) and Chengdu (CTU) stand out due to the high number of direct flight routes they operate. These large bubbles indicate that these airports serve as key points of connectivity, both within China and across Asia.
+
+In this chart, bubble size represents the number of direct flights departing from each airport. A larger bubble means a greater number of unique origin-destination pairs, highlighting the airport’s role in facilitating widespread air travel. High flight volumes are often associated with strong economic activity, large populations, or strategic geographic locations.
+
+Airports with large bubbles typically serve cities that are business hubs, tourist destinations, or centers of government. Their prominence suggests high travel demand and well-developed infrastructure. The repeated appearance of certain airports at the top of the chart indicates that they function as major transfer hubs or gateways, connecting not only their own country but also neighboring regions.
+
+This pattern supports the idea that flight routes reflect more than just transportation needs. They reveal deeper trends in economic development, regional influence, and international connectivity.
                             </p>
                         </div>
                     </section>
